kubernetes/apps/open-webui/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`ai.woitzik.dev`)
    kind: Rule
    middlewares: [{name: authelia}]
    services: [{name: open-webui, port: 8080}]
  tls: {secretName: wildcard-woitzik-dev-tls}
